--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	</head>
 	<body style="display: flex;align-items: center; justify-content: center;" >
 		<div id="bg">
-			<div><img src="img/成绩总览.png" /></div>
-			<div><img src="img/成绩登录页.png"></div>
-			<div><img src="img/成绩详情页.png"></div>
-			<div><img src="img/点歌台个人中心.png" /></div>
-			<div><img src="img/点歌台音频播放.png" /></div>
-			<div><img src="img/点歌台首页.png" /></div>
+			<div><img src="img/1.png" /></div>
+			<div><img src="img/2.png"></div>
+			<div><img src="img/3.png"></div>
+			<div><img src="img/4.png" /></div>
+			<div><img src="img/5.png" /></div>
+			<div><img src="img/6.png" /></div>
 		</div>
 	</body>
 </html>
